# Rc4-Lib

./: CMakeLists.txt  README.md  test.sh
include/rc4lib/: rc4.hpp
src/: CMakeLists.txt  rc4.cpp
tests/: CMakeLists.txt  encryption.cpp
